fix alignment of buttons in headers of widgets

--- a/src/main/resources/src/components/MainPage/GeneralPage/AdminWorkspace/AdminWorkspace.scss
+++ b/src/main/resources/src/components/MainPage/GeneralPage/AdminWorkspace/AdminWorkspace.scss
@@ -33,6 +33,7 @@
     background-color: $secondary-text-color;
     color: $primary-text-color;
     border: 1px solid $button__background--inverted;
+    margin-top: -8px;
 
     &__img {
       max-width: 20px;
